# component

./: Gruntfile.js  setup.cfg
src/: __main__.py  generate.py  parse.py  utils.py
src/templates/: Component.tsx.j2  component.scss.j2  component.spec.tsx.j2
