[metadata]
name = component
version = 0.1.0

description = Generate a react component skeleton.
url = https://github.com/JoelLefkowitz/component

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/JoelLefkowitz/component/issues
   CI            = https://github.com/JoelLefkowitz/component/actions
   Documentation = https://component.readthedocs.io/en/latest/
   Source Code   = https://github.com/JoelLefkowitz/component

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# Rename the package (metadata.name is the published/pypi name)
packages = component

# Map the new package name to its source directory
package_dir =
    component = src

# Apply the MANIFEST.in to include subpackages
include_package_data = True

python_requires = >= 3.6

setup_requires = 
    setuptools

install_requires =
    convert_case
    walkmate

[options.entry_points]
console_scripts = 
    component = component.__main__:main

[options.packages.find]
exclude =
    tests
    
[options.extras_require]
linters =
    mypy
    pylint
    bandit

formatters =
    autoflake
    black
    isort

tests =
    assertpy
    coverage
    freezegun
    mock
    pytest
    pytest-mocha
    pytest-sugar
    tox

release =
    bump2version
    quickdocs
    twine
    wheel
